[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level_00.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI.tscn" type="PackedScene" id=8]

[node name="World" type="Node"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 7.77481, 140.568 )

[node name="CameraFollow" parent="Player" index="4"]
remote_path = NodePath("../../Camera")

[node name="UI" parent="." instance=ExtResource( 8 )]

[node name="Level_00" parent="." instance=ExtResource( 1 )]

[node name="Camera" parent="." instance=ExtResource( 7 )]
position = Vector2( 7.77481, 132.568 )

[node name="PlayerDeathTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="PlayerDeathTimer" to="." method="_on_PlayerDeathTimer_timeout"]

[editable path="Player"]
